Eevee ERROR: 0:14: Invalid call of undeclared identifier 'texture3D' on MacPro #52591

Closed
opened 2017-08-30 17:15:07 +02:00 by Josh Booth · 6 comments

System Info
OpenGL:


renderer: 'AMD Radeon HD - FirePro D300 OpenGL Engine'
vendor: 'ATI Technologies Inc.'
version: '4.1 ATI-1.51.8'
ERROR: could not get opengl string

Blender Version
Broken: 510651ed72
Worked: 459365443f

Short description of error
Simply open blender and immediately on the default scene, the graphics do not look correct in Eevee.
The console outputs:

Shader compile error:
ERROR: 0:14: Invalid call of undeclared identifier 'texture3D'

**System Info** OpenGL: **** renderer: 'AMD Radeon HD - FirePro [D300](https://archive.blender.org/developer/D300) OpenGL Engine' vendor: 'ATI Technologies Inc.' version: '4.1 ATI-1.51.8' ERROR: could not get opengl string **Blender Version** Broken: 510651ed72 Worked: 459365443f **Short description of error** Simply open blender and immediately on the default scene, the graphics do not look correct in Eevee. The console outputs: ``` Shader compile error: ERROR: 0:14: Invalid call of undeclared identifier 'texture3D' ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JoshBooth

Added subscriber: @JoshBooth

Added subscribers: @AndyCodling, @brecht, @dfelinto

Added subscribers: @AndyCodling, @brecht, @dfelinto

I cleaned up the report. And I suspect this was introduced (or at least exposed) on 510651ed72.
Regardless of how Eevee looks, I would like to keep this report focused on the console errors related to "Texture3D".

I cleaned up the report. And I suspect this was introduced (or at least exposed) on 510651ed72. Regardless of how Eevee looks, I would like to keep this report focused on the console errors related to "Texture3D".

This issue was referenced by 480def9c55

This issue was referenced by 480def9c5587b710ce478a58985e2e4359c14467

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52591
No description provided.