Fix T52591: OpenColorIO not working correct with OpenGL core profile on macOS.

Also remove textureSize() replacement code, is always supported now.